crates/lang/macro/tests/ui/trait_def/fail/invalid_payable_2.stderr
error: unknown ink! attribute argument (name = value)
 --> $DIR/invalid_payable_2.rs:5:20
  |
5 |     #[ink(message, payable = true)]
  |                    ^^^^^^^^^^^^^^
